examples/BAD/BAD_050_CONSISTENCY_5/main.nut
Import 'main2.nut'

Data Path :-
    - string: content
    - bool: isAbsolute

@ Path {
    string: "./main.nut"
    isAbsolute: true
}
